# Copyright (C) 2005-2010 MaNGOS <http://getmangos.com/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Change installation location
#  datadir = mangos/sql/updates
pkgdatadir = $(datadir)/mangos/sql/updates

## Files to be installed
#  Install basic SQL files to datadir
pkgdata_DATA = \
	09010_01_realmd_realmlist.sql \
	09692_01_characters_mail.sql \
	09692_02_characters_mail.sql \
	09692_03_mangos_spell_proc_event.sql \
	09702_01_characters_item.sql \
	09704_01_mangos_achievement_reward.sql \
	09710_01_mangos_command.sql \
	09716_01_mangos_npc_vendor.sql \
	09716_02_mangos_mangos_string.sql \
	09720_01_mangos_spell_proc_event.sql \
	09728_01_mangos_gossip_menu_option.sql \
	09735_01_mangos_spell_proc_event.sql \
	09735_02_mangos_spell_chain.sql \
	09746_01_realmd_realmlist.sql \
	09747_01_mangos_battleground_template.sql \
	09748_01_realmd_realmlist.sql \
	09751_01_characters.sql \
	09752_01_mangos_gameobject_template.sql \
	09753_01_mangos_instance_template.sql \
	09755_01_mangos_instance_template.sql \
	09761_01_mangos_mangos_string.sql \
	09763_01_mangos_battleground_template.sql \
	09766_01_mangos_spell_proc_event.sql \
	09767_01_mangos_mangos_string.sql \
	09767_02_mangos_command.sql \
	09767_03_characters_characters.sql \
	09768_01_mangos_command.sql \
	09794_01_mangos_mangos_string.sql \
	09794_02_mangos_command.sql \
	09803_01_mangos_spell_bonus_data.sql \
	09826_01_mangos_spell_script_target.sql \
	09849_01_characters_saved_variables.sql \
	09854_01_mangos_spell_bonus_data.sql \
	09881_01_mangos_scripts.sql \
	09883_01_mangos_scripts.sql \
	09886_01_mangos_mangos_string.sql \
	09886_02_mangos_command.sql \
	09891_01_mangos_creature_movement.sql \
	09891_02_mangos_creature_movement_scripts.sql \
	09899_01_mangos_spell_bonus_data.sql \
	09924_01_mangos_mangos_string.sql \
	09924_02_mangos_command.sql \
	09957_01_mangos_mangos_string.sql \
	09957_02_mangos_npc_vendor.sql \
	09967_01_mangos_spell_proc_event.sql \
	09974_01_characters_group.sql \
	09977_01_mangos_spell_proc_event.sql \
	09978_01_mangos_spell_bonus_data.sql \
	09988_01_mangos_spell_chain.sql \
	09990_01_mangos_spell_chain.sql \
	10007_01_characters_pet_aura.sql \
	10008_01_mangos_db_verison.sql \
	10008_01_realmd_realmd_db_version.sql \
	10011_01_mangos_spell_proc_event.sql \
	10012_01_mangos_spell_proc_event.sql \
	10015_01_mangos_spell_proc_event.sql \
	10017_01_mangos_spell_proc_event.sql \
	10036_01_mangos_spell_chain.sql \
	10036_01_mangos_spell_proc_event.sql \
	10044_01_mangos_spell_chain.sql \
	10044_02_mangos_spell_proc_event.sql \
	10045_01_mangos_spell_proc_event.sql \
	10051_01_characters_character_aura.sql \
	10056_01_mangos_spell_proc_event.sql \
	10086_01_mangos_command.sql \
	10089_01_mangos_game_event_pool.sql \
	10106_01_mangos_command.sql \
	10106_02_mangos_mangos_string.sql \
	10107_01_mangos_mangos_string.sql \
	10109_01_mangos_creature_model_info.sql \
	10119_01_mangos_creature_model_info.sql \
	10125_01_mangos_mangos_string.sql \
	10131_01_mangos_spell_bonus_data.sql \
	10148_01_mangos_mangos_string.sql \
	10156_01_characters_character_aura.sql \
	10156_02_characters_pet_aura.sql \
	10156_03_mangos_spell_proc_event.sql \
	10159_01_mangos_spell_proc_event.sql \
	10160_01_characters_character_aura.sql \
	10160_02_characters_pet_aura.sql \
	10171_01_mangos_mangos_string.sql \
	10197_01_mangos_playercreateinfo.sql \
	10203_01_mangos_item_template.sql \
	10205_01_mangos_spell_area.sql \
	10207_01_mangos_npc_vendor.sql \
	10208_01_mangos_playercreateinfo.sql \
	10217_01_mangos_playercreateinfo_spell.sql \
	10217_02_mangos_playercreateinfo_action.sql \
	10217_03_mangos_spell_learn_spell.sql \
	10217_04_mangos_spell_chain.sql \
	10217_05_mangos_spell_proc_event.sql \
	10219_01_mangos_spell_proc_event.sql \
	10223_01_mangos_spell_proc_event.sql \
	README

## Additional files to include when running 'make dist'
#  SQL update files, to upgrade database schema from older revisions
EXTRA_DIST = \
	09010_01_realmd_realmlist.sql \
	09692_01_characters_mail.sql \
	09692_02_characters_mail.sql \
	09692_03_mangos_spell_proc_event.sql \
	09702_01_characters_item.sql \
	09704_01_mangos_achievement_reward.sql \
	09710_01_mangos_command.sql \
	09716_01_mangos_npc_vendor.sql \
	09716_02_mangos_mangos_string.sql \
	09720_01_mangos_spell_proc_event.sql \
	09728_01_mangos_gossip_menu_option.sql \
	09735_01_mangos_spell_proc_event.sql \
	09735_02_mangos_spell_chain.sql \
	09746_01_realmd_realmlist.sql \
	09747_01_mangos_battleground_template.sql \
	09748_01_realmd_realmlist.sql \
	09751_01_characters.sql \
	09752_01_mangos_gameobject_template.sql \
	09753_01_mangos_instance_template.sql \
	09755_01_mangos_instance_template.sql \
	09761_01_mangos_mangos_string.sql \
	09763_01_mangos_battleground_template.sql \
	09766_01_mangos_spell_proc_event.sql \
	09767_01_mangos_mangos_string.sql \
	09767_02_mangos_command.sql \
	09767_03_characters_characters.sql \
	09768_01_mangos_command.sql \
	09794_01_mangos_mangos_string.sql \
	09794_02_mangos_command.sql \
	09803_01_mangos_spell_bonus_data.sql \
	09826_01_mangos_spell_script_target.sql \
	09849_01_characters_saved_variables.sql \
	09854_01_mangos_spell_bonus_data.sql \
	09881_01_mangos_scripts.sql \
	09883_01_mangos_scripts.sql \
	09886_01_mangos_mangos_string.sql \
	09886_02_mangos_command.sql \
	09891_01_mangos_creature_movement.sql \
	09891_02_mangos_creature_movement_scripts.sql \
	09899_01_mangos_spell_bonus_data.sql \
	09924_01_mangos_mangos_string.sql \
	09924_02_mangos_command.sql \
	09957_01_mangos_mangos_string.sql \
	09957_02_mangos_npc_vendor.sql \
	09967_01_mangos_spell_proc_event.sql \
	09974_01_characters_group.sql \
	09977_01_mangos_spell_proc_event.sql \
	09978_01_mangos_spell_bonus_data.sql \
	09988_01_mangos_spell_chain.sql \
	09990_01_mangos_spell_chain.sql \
	10007_01_characters_pet_aura.sql \
	10008_01_mangos_db_verison.sql \
	10008_01_realmd_realmd_db_version.sql \
	10011_01_mangos_spell_proc_event.sql \
	10012_01_mangos_spell_proc_event.sql \
	10015_01_mangos_spell_proc_event.sql \
	10017_01_mangos_spell_proc_event.sql \
	10036_01_mangos_spell_chain.sql \
	10036_01_mangos_spell_proc_event.sql \
	10044_01_mangos_spell_chain.sql \
	10044_02_mangos_spell_proc_event.sql \
	10045_01_mangos_spell_proc_event.sql \
	10051_01_characters_character_aura.sql \
	10056_01_mangos_spell_proc_event.sql \
	10086_01_mangos_command.sql \
	10089_01_mangos_game_event_pool.sql \
	10106_01_mangos_command.sql \
	10106_02_mangos_mangos_string.sql \
	10107_01_mangos_mangos_string.sql \
	10109_01_mangos_creature_model_info.sql \
	10119_01_mangos_creature_model_info.sql \
	10125_01_mangos_mangos_string.sql \
	10131_01_mangos_spell_bonus_data.sql \
	10148_01_mangos_mangos_string.sql \
	10156_01_characters_character_aura.sql \
	10156_02_characters_pet_aura.sql \
	10156_03_mangos_spell_proc_event.sql \
	10159_01_mangos_spell_proc_event.sql \
	10160_01_characters_character_aura.sql \
	10160_02_characters_pet_aura.sql \
	10171_01_mangos_mangos_string.sql \
	10197_01_mangos_playercreateinfo.sql \
	10203_01_mangos_item_template.sql \
	10205_01_mangos_spell_area.sql \
	10207_01_mangos_npc_vendor.sql \
	10208_01_mangos_playercreateinfo.sql \
	10217_01_mangos_playercreateinfo_spell.sql \
	10217_02_mangos_playercreateinfo_action.sql \
	10217_03_mangos_spell_learn_spell.sql \
	10217_04_mangos_spell_chain.sql \
	10217_05_mangos_spell_proc_event.sql \
	10219_01_mangos_spell_proc_event.sql \
	10223_01_mangos_spell_proc_event.sql \
	README
